<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/github_username_header">

        <EditTextPreference
            app:key="github_username"
            app:title="@string/github_username_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/updates_header">

        <SwitchPreferenceCompat
            app:key="auto_update"
            app:title="@string/auto_update_title"
            app:summaryOff="@string/auto_update_summary_off"/>

        <ListPreference
            app:dependency="auto_update"
            app:defaultValue="1"
            app:entries="@array/update_frequency_entries"
            app:entryValues="@array/update_frequency_values"
            app:key="update_frequency"
            app:title="@string/update_frequency_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
